--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -21,10 +21,8 @@ header {
     display: inline-block;
     margin: 5px 20px;
     cursor: pointer;
-    font-size: 22px;
-    font-weight: bold;
-    letter-spacing: 1px;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
+    font-size: 28px;
+    color: #040936ce;
 }
 
 .nav-link {
